@@ -6,6 +6,9 @@ defaults.bluealsa.device "00:00:00:00:00:00"
 # Default to A2DP connection because that is what
 # most people want to use - high quality audio.
 defaults.bluealsa.profile "a2dp"
+# By default allow BlueALSA to negotiate the "best"
+# codec for each PCM.
+defaults.bluealsa.codec "unchanged"
 # By default do not change the volume or mute state
 # when a PCM is opened.
 defaults.bluealsa.volume "unchanged"
@@ -38,7 +41,7 @@ ctl.bluealsa {
 }
 
 pcm.bluealsa {
-	@args [ DEV PROFILE VOL SOFTVOL DELAY SRV ]
+	@args [ DEV PROFILE CODEC VOL SOFTVOL DELAY SRV ]
 	@args.DEV {
 		type string
 		default {
@@ -51,6 +54,13 @@ pcm.bluealsa {
 		default {
 			@func refer
 			name defaults.bluealsa.profile
+		}
+	}
+	@args.CODEC {
+		type string
+		default {
+			@func refer
+			name defaults.bluealsa.codec
 		}
 	}
 	@args.VOL {
@@ -86,6 +96,7 @@ pcm.bluealsa {
 		type bluealsa
 		device $DEV
 		profile $PROFILE
+		codec $CODEC
 		volume $VOL
 		softvol $SOFTVOL
 		delay $DELAY
