@@ -35,6 +35,7 @@
 
 #include "shared/dbus-client.h"
 #include "shared/defs.h"
+#include "shared/hex.h"
 #include "shared/log.h"
 #include "shared/rt.h"
 
@@ -445,7 +446,7 @@ static int bluealsa_hw_params(snd_pcm_ioplug_t *io, snd_pcm_hw_params_t *params)
 	pcm->frame_size = (snd_pcm_format_physical_width(io->format) * io->channels) / 8;
 
 	DBusError err = DBUS_ERROR_INIT;
-	if (!bluealsa_dbus_open_pcm(&pcm->dbus_ctx, pcm->ba_pcm.pcm_path,
+	if (!bluealsa_dbus_pcm_open(&pcm->dbus_ctx, pcm->ba_pcm.pcm_path,
 				&pcm->ba_pcm_fd, &pcm->ba_pcm_ctrl_fd, &err)) {
 		debug2("Couldn't open PCM: %s", err.message);
 		dbus_error_free(&err);
@@ -990,6 +991,49 @@ static int bluealsa_set_hw_constraint(struct bluealsa_pcm *pcm) {
 	return 0;
 }
 
+static bool bluealsa_select_pcm_codec(struct bluealsa_pcm *pcm, const char *codec, DBusError *err) {
+
+	uint8_t config[64];
+	ssize_t config_len = 0;
+	bool ret = false;
+
+	if (codec == NULL || codec[0] == '\0')
+		return true;
+
+	char *codec_name;
+	if ((codec_name = strdup(codec)) == NULL) {
+		dbus_set_error(err, DBUS_ERROR_NO_MEMORY, NULL);
+		return false;
+	}
+
+	char *config_hex;
+	/* split the given string into name and configuration components */
+	if ((config_hex = strchr(codec_name, ':')) != NULL) {
+		*config_hex++ = '\0';
+
+		size_t config_hex_len;
+		if ((config_hex_len = strlen(config_hex)) > sizeof(config) * 2) {
+			dbus_set_error(err, DBUS_ERROR_FAILED, "Invalid codec configuration: %s", config_hex);
+			goto fail;
+		}
+		if ((config_len = hex2bin(config_hex, config, config_hex_len)) == -1) {
+			dbus_set_error(err, DBUS_ERROR_FAILED, "%s", strerror(errno));
+			goto fail;
+		}
+
+	}
+
+	if (!bluealsa_dbus_pcm_select_codec(&pcm->dbus_ctx, pcm->ba_pcm.pcm_path,
+				bluealsa_dbus_pcm_get_codec_canonical_name(codec_name), config, config_len, err))
+		goto fail;
+
+	ret = true;
+
+fail:
+	free(codec_name);
+	return ret;
+}
+
 static bool bluealsa_update_pcm_volume(struct bluealsa_pcm *pcm,
 		int volume, int mute, DBusError *err) {
 	uint16_t old = pcm->ba_pcm.volume.raw;
@@ -1025,6 +1069,7 @@ SND_PCM_PLUGIN_DEFINE_FUNC(bluealsa) {
 	const char *service = BLUEALSA_SERVICE;
 	const char *device = NULL;
 	const char *profile = NULL;
+	const char *codec = NULL;
 	const char *volume = NULL;
 	const char *softvol = NULL;
 	long delay = 0;
@@ -1062,6 +1107,15 @@ SND_PCM_PLUGIN_DEFINE_FUNC(bluealsa) {
 				SNDERR("Invalid type for %s", id);
 				return -EINVAL;
 			}
+			continue;
+		}
+		if (strcmp(id, "codec") == 0) {
+			if (snd_config_get_string(n, &codec) < 0) {
+				SNDERR("Invalid type for %s", id);
+				return -EINVAL;
+			}
+			if (strcmp(codec, "unchanged") == 0)
+				codec = NULL;
 			continue;
 		}
 		if (strcmp(id, "volume") == 0) {
@@ -1188,6 +1242,11 @@ SND_PCM_PLUGIN_DEFINE_FUNC(bluealsa) {
 	if ((ret = bluealsa_set_hw_constraint(pcm)) < 0) {
 		snd_pcm_ioplug_delete(&pcm->io);
 		return ret;
+	}
+
+	if (!bluealsa_select_pcm_codec(pcm, codec, &err)) {
+		SNDERR("Couldn't select BlueALSA PCM codec: %s", err.message);
+		dbus_error_free(&err);
 	}
 
 	if (!bluealsa_update_pcm_volume(pcm, pcm_volume, pcm_mute, &err)) {
