@@ -178,11 +178,22 @@ dbus_bool_t bluealsa_dbus_get_pcm(
 		struct ba_pcm *pcm,
 		DBusError *error);
 
-dbus_bool_t bluealsa_dbus_open_pcm(
+dbus_bool_t bluealsa_dbus_pcm_open(
 		struct ba_dbus_ctx *ctx,
 		const char *pcm_path,
 		int *fd_pcm,
 		int *fd_pcm_ctrl,
+		DBusError *error);
+
+const char *bluealsa_dbus_pcm_get_codec_canonical_name(
+		const char *alias);
+
+dbus_bool_t bluealsa_dbus_pcm_select_codec(
+		struct ba_dbus_ctx *ctx,
+		const char *pcm_path,
+		const char *codec,
+		const void *configuration,
+		size_t configuration_len,
 		DBusError *error);
 
 dbus_bool_t bluealsa_dbus_open_rfcomm(
